objects/Food__c.object
<CustomObject>
    <fields>
        <fullName>Average_Rating__c</fullName>
        <label>Average Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DAY__c</fullName>
        <label>DAY</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
                <value>
                    <fullName>Sunday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Food_Name__c</fullName>
        <label>Food Name</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TYPE__c</fullName>
        <label>TYPE</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Breakfast</fullName>
                </value>
                <value>
                    <fullName>Lunch</fullName>
                </value>
                <value>
                    <fullName>Dinner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Food</label>
    <nameField>
        <displayFormat>F-{0000}</displayFormat>
        <label>Food Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Food</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>